# EXECNOIR

./: README.md
opencvworkshop/bgrtogray/: main.cpp
opencvworkshop/opencvblend/: main.cpp
opencvworkshop/opencvdrawing/: CMakeLists.txt  angles.db  main.cpp
week-01/day-02/AnimalsAndLegs/: main.cpp
week-01/day-02/AverageOfInput/: main.cpp
week-01/day-02/BMI/: main.cpp
week-01/day-02/CodingHours/: main.cpp
week-01/day-02/ConditionalVariableMutation/: main.cpp
week-01/day-02/DefineBasicInfo/: main.cpp
week-01/day-02/FavouriteNumber/: main.cpp
week-01/day-02/HelloOthers/: main.cpp
week-01/day-02/HelloUser/: main.cpp
week-01/day-02/HumptyDumpty/: main.cpp
week-01/day-02/IntroduceYourself/: main.cpp
week-01/day-02/MileToKmConverter/: main.cpp
week-01/day-02/OddEven/: main.cpp
week-01/day-02/OneTwoALot/: main.cpp
week-01/day-02/PartyIndicator/: main.cpp
week-01/day-02/PrintBigger/: main.cpp
week-01/day-02/SecondsInADaz/: CMakeLists.txt  main.cpp
week-01/day-02/TwoNumbers/: main.cpp
week-01/day-02/VariableMutation/: main.cpp
week-01/day-02/cuboid/: main.cpp
week-01/day-02/hellome/: main.cpp
week-02/day-01/AppendArray/: CMakeLists.txt  main.cpp
week-02/day-01/Appenda/: CMakeLists.txt  main.cpp
week-02/day-01/ChangeElement/: main.cpp
week-02/day-01/Colors/: main.cpp
week-02/day-01/CompareLenght/: CMakeLists.txt  main.cpp
week-02/day-01/DoubleItems/: main.cpp
week-02/day-01/Doubling/: main.cpp
week-02/day-01/Factorio/: main.cpp
week-02/day-01/Greeter/: CMakeLists.txt  main.cpp
week-02/day-01/IncrementElement/: main.cpp
(+303 files in other folders)
